--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "axios": "^1.3.6",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "google-map-react": "^2.2.0",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
